# Mint

./: .gitignore  README.md  pyproject.toml
CoI_AI_Project/: README.md
CoI_AI_Project/python_ai/: main.py  requirements.txt
CoI_AI_Project/src/CoI_AI_Mod/: CoI_AI_Mod.cs  CoI_AI_Mod.csproj  CoI_AI_Mod.sln
MC_AI_Project/: build.gradle  gradle.properties  settings.gradle
MC_AI_Project/src/main/java/com/limme/ai/: AiCraft.java
MC_AI_Project/src/main/resources/: fabric.mod.json
factorio_ai_project/factorio_mod/: control.lua  info.json
factorio_ai_project/python_ai/: main.py
mint/: __init__.py  __main__.py  assistant.py  builder.py  cli.py  config.py  ninja_writer.py  utils.py
mint/toolchains/: __init__.py  base.py  command.py  cpp.py  csharp.py  csharp_native.py  dart.py  dart_native.py  go.py  haskell.py  haskell_native.py  java.py  java_native.py  kotlin.py  kotlin_native.py  lua_native.py  node.py  php.py  php_native.py  python.py  ruby.py  ruby_native.py  rust.py  rust_native.py  scala.py  scala_native.py  swift.py  swift_native.py  yaml.py  zig.py  zig_native.py
mint/utils/: java.py
python_ai/: main.py  requirements.txt
tests/: test_yaml_toolchain.py
