[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mint-build"
version = "0.1.1"
description = "Minimal yet stable C/C++ build tool with a focus on robustness and cross-platform compatibility"
requires-python = ">=3.11"
authors = [{ name = "Mint Contributors" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.5b2",
    "isort>=5.9.1",
    "mypy>=0.812",
    "flake8>=3.9.2",
]

[tool.setuptools]
packages = ["mint"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.scripts]
mint = "mint.cli:app"
 